--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -10,32 +10,34 @@
         <div class="row intake-header">
             <h5>
                 <span class ="intake-collapse">
-                    <img class="intake-collapse-img" src ="/Content/Images/collapse.png" />
+                    <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
+                    <img class="intake-expand-img" src="/Content/Images/expand.png" />
                     Contact Information
                 </span>
             </h5>
         </div>
         <div class="row intake-row collapse in">
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>Name:</label>
                 <span class="intake-span">@Model.Transferee.FullName</span>
             </div>
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>Email:</label>
                 <span class="intake-span">@Model.Transferee.Email</span>
             </div>
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>Phone:</label>
                 <span class="intake-span">@Model.Transferee.PhoneNumber</span>
             </div>
         </div>
     </div>
     <hr/>
-`   <div class="intake-block" data-block="destination">
+    <div class="intake-block" data-block="destination">
         <div class="row intake-header">
             <h5>
                 <span class="intake-collapse">
                     <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
+                    <img class="intake-expand-img" src="/Content/Images/expand.png" />
                     Destination Location
                 </span>
                 <span class="intake-edit">
@@ -47,23 +49,23 @@
             </h5>
         </div>
         <div class="row intake-row collapse in">
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>City:</label>
                 <span class="intake-span">@Model.DestinationCity</span>
                 @Html.TextBoxFor(m => @Model.DestinationCity,new {@class="form-control intake-input"})
-                @Html.HiddenFor(m => @Model.DestinationCity)
+                @Html.HiddenFor(m => @Model.DestinationCity, new { @class = "intake-hidden" })
             </div>
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>State:</label>
                 <span class="intake-span">@Model.DestinationState</span>
                 @Html.TextBoxFor(m => @Model.DestinationState,new {@class= "form-control intake-input" })
-                @Html.HiddenFor(m => @Model.DestinationState)
+                @Html.HiddenFor(m => @Model.DestinationState, new { @class = "intake-hidden" })
             </div>
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>Country:</label>
                 <span class="intake-span">@Model.DestinationCountry</span>
                 @Html.TextBoxFor(m => @Model.DestinationCountry, new { @class = "form-control intake-input" })
-                @Html.HiddenFor(m => @Model.DestinationCountry)
+                @Html.HiddenFor(m => @Model.DestinationCountry, new { @class = "intake-hidden" })
             </div>
         </div>
     </div>
@@ -73,6 +75,7 @@
             <h5>
                 <span class="intake-collapse">
                     <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
+                    <img class="intake-expand-img" src="/Content/Images/expand.png" />
                     Departure Location
                 </span>
                 <span class="intake-edit">
@@ -84,32 +87,33 @@
             </h5>
         </div>
         <div class="row intake-row collapse in">
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>City:</label>
                 <span class="intake-span">@Model.OriginCity</span>
                 @Html.TextBoxFor(m => @Model.OriginCity, new { @class = "form-control intake-input" })
-                @Html.HiddenFor(m => @Model.OriginCity)
+                @Html.HiddenFor(m => @Model.OriginCity, new { @class = "intake-hidden" })
             </div>
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>State:</label>
                 <span class="intake-span">@Model.OriginState</span>
                 @Html.TextBoxFor(m => @Model.OriginState, new { @class = "form-control intake-input" })
-                @Html.HiddenFor(m => @Model.OriginState)
+                @Html.HiddenFor(m => @Model.OriginState, new { @class = "intake-hidden" })
             </div>
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>Country:</label>
                 <span class="intake-span">@Model.OriginCountry</span>
                 @Html.TextBoxFor(m => @Model.OriginCountry, new { @class = "form-control intake-input" })
-                @Html.HiddenFor(m => @Model.OriginCountry)
+                @Html.HiddenFor(m => @Model.OriginCountry, new { @class = "intake-hidden" })
             </div>
         </div>
     </div>
     <hr/>
-    <div class="intake-block">
+    @*<div class="intake-block">
         <div class="row intake-header">
             <h5>
                 <span class="intake-collapse">
                     <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
+                    <img class="intake-expand-img" src="/Content/Images/expand.png" />
                     Relocation Dates
                 </span>
                 <span class="intake-edit">
@@ -156,23 +160,24 @@
                 <input type="text" class="form-control intake-input"/>
             </div>
         </div>
-    </div>
+    </div>*@
     <hr/>
     <div class="intake-block">
         <div class="row intake-header">
             <h5>
                 <span class ="intake-collapse">
-                    <img class="intake-collapse-img" src ="/Content/Images/collapse.png" />
+                    <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
+                    <img class="intake-expand-img" src="/Content/Images/expand.png" />
                     General
                 </span>
             </h5>
         </div>
         <div class="row intake-row collapse in">
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>Rush:</label>
                 <span class="intake-span">Yes</span>
             </div>
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>Vip:</label>
                 <span class="intake-span">No</span>
             </div>
@@ -184,6 +189,7 @@
             <h5>
                 <span class="intake-collapse">
                     <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
+                    <img class="intake-expand-img" src="/Content/Images/expand.png" />
                     Family And Pets
                 </span>
                 <span class="intake-edit">
@@ -196,17 +202,17 @@
             </h5>
         </div>
         <div class="row intake-row collapse in">
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>Spouse/Partner:</label>
                 <span class="intake-span">@Model.SpouseName</span>
                 @Html.TextBoxFor(m => @Model.SpouseName, new { @class = "form-control intake-input" })
-                @Html.HiddenFor(m => @Model.SpouseName)
+                @Html.HiddenFor(m => @Model.SpouseName, new { @class = "intake-hidden" })
             </div>
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>Visa Type:</label>
                 <span class="intake-span">@Model.SpouseVisaType</span>
                 @Html.TextBoxFor(m => @Model.SpouseVisaType, new { @class = "form-control intake-input" })
-                @Html.HiddenFor(m => @Model.SpouseVisaType)
+                @Html.HiddenFor(m => @Model.SpouseVisaType, new { @class = "intake-hidden" })
             </div>
         </div>
         <div class="row intake-row collapse in">
@@ -219,25 +225,25 @@
             for (int i = 0; i < @Model.Children.Count(); i++)
             {
                 <div class="row intake-row collapse in" data-entity-id="@Model.Children.ElementAt(i).Id" data-entity-collection="children">
-                    <div class="col-sm-3 intake-col">
+                    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                         <label>Child:</label>
                         <span class="intake-span">@Model.Children.ElementAt(i).Name</span>
                         @Html.TextBoxFor(m => @Model.Children.ElementAt(i).Name, new {@class = "form-control intake-input" })
-                        @Html.HiddenFor(m => @Model.Children.ElementAt(i).Name)
+                        @Html.HiddenFor(m => @Model.Children.ElementAt(i).Name, new { @class = "intake-hidden" })
                     </div>
-                    <div class="col-sm-3 intake-col">
+                    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                         <label>Age:</label>
                         <span class="intake-span">@Model.Children.ElementAt(i).Age</span>
                         @Html.TextBoxFor(m => @Model.Children.ElementAt(i).Age, new {@class = "form-control intake-input" })
-                        @Html.HiddenFor(m => @Model.Children.ElementAt(i).Age)
+                        @Html.HiddenFor(m => @Model.Children.ElementAt(i).Age, new { @class = "intake-hidden" })
                     </div>
-                    <div class="col-sm-3 intake-col">
+                    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                         <label>Grade:</label>
                         <span class="intake-span">@Model.Children.ElementAt(i).Grade</span>
                         @Html.TextBoxFor(m => @Model.Children.ElementAt(i).Grade, new {@class = "form-control intake-input" })
-                        @Html.HiddenFor(m => @Model.Children.ElementAt(i).Grade)
+                        @Html.HiddenFor(m => @Model.Children.ElementAt(i).Grade, new { @class = "intake-hidden" })
                     </div>
-                    <div class="col-sm-3 intake-col">
+                    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                         <span class="intake-del">
                             x Delete
                         </span>
@@ -250,7 +256,7 @@
                 <label>Educational Preferences:</label>
                 <span class="intake-span">@Model.ChildrenEducationPreferences</span>
                 @Html.TextAreaFor(m => @Model.ChildrenEducationPreferences, new { @class = "form-control intake-input" })
-                @Html.HiddenFor(m => @Model.ChildrenEducationPreferences)
+                @Html.HiddenFor(m => @Model.ChildrenEducationPreferences, new { @class = "intake-hidden" })
             </div>
         </div>
         <div class="row intake-row collapse in">
@@ -263,25 +269,25 @@
             for (int i = 0; i < @Model.Pets.Count(); i++)
             {
                 <div class="row intake-row collapse in" data-entity-id="@Model.Pets.ElementAt(i).Id" data-entity-collection="pets">
-                    <div class="col-sm-3 intake-col">
+                    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                         <label>Pet Type:</label>
                         <span class="intake-span">@Model.Pets.ElementAt(i).Type</span>
                         @Html.TextBoxFor(m => @Model.Pets.ElementAt(i).Type, new {@class = "form-control intake-input" })
-                        @Html.HiddenFor(m => @Model.Pets.ElementAt(i).Type)
+                        @Html.HiddenFor(m => @Model.Pets.ElementAt(i).Type, new { @class = "intake-hidden" })
                     </div>
-                    <div class="col-sm-3 intake-col">
+                    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                         <label>Breed:</label>
                         <span class="intake-span">@Model.Pets.ElementAt(i).Breed</span>
                         @Html.TextBoxFor(m => @Model.Pets.ElementAt(i).Breed, new {@class = "form-control intake-input" })
-                        @Html.HiddenFor(m => @Model.Pets.ElementAt(i).Breed)
+                        @Html.HiddenFor(m => @Model.Pets.ElementAt(i).Breed, new { @class = "intake-hidden" })
                     </div>
-                    <div class="col-sm-3 intake-col">
+                    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                         <label>Weight/Size:</label>
                         <span class="intake-span">@Model.Pets.ElementAt(i).Size</span>
                         @Html.TextBoxFor(m => @Model.Pets.ElementAt(i).Size, new {@class = "form-control intake-input" })
-                        @Html.HiddenFor(m => @Model.Pets.ElementAt(i).Size)
+                        @Html.HiddenFor(m => @Model.Pets.ElementAt(i).Size, new { @class = "intake-hidden" })
                     </div>
-                    <div class="col-sm-3 intake-col">
+                    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                         <span class="intake-del">
                             x Delete
                         </span>
@@ -294,7 +300,7 @@
                 <label>Pet Notes:</label>
                 <span class="intake-span">@Model.PetNotes</span>
                 @Html.TextAreaFor(m => @Model.PetNotes, new { @class = "form-control intake-input" })
-                @Html.HiddenFor(m => @Model.PetNotes)
+                @Html.HiddenFor(m => @Model.PetNotes, new { @class = "intake-hidden" })
             </div>
         </div>
     </div>
@@ -304,6 +310,7 @@
             <h5>
                 <span class="intake-collapse">
                     <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
+                    <img class="intake-expand-img" src="/Content/Images/expand.png" />
                     Services
                 </span>
                 <span class="intake-save">
@@ -314,13 +321,13 @@
         @for(int i = 0; i < @Model.Services.Count(); i++)
         {
             <div class="row intake-row collapse in" data-entity-id="@Model.Services.ElementAt(i).Id" data-entity-collection="services">
-                <div class="col-sm-1 intake-col">
+                <div class="col-xs-2 col-sm-1 intake-col">
                     <input type="checkbox" class="intake-service-input" name="Selected"  @Model.Services.ElementAt(i).Selected ? checked ="checked" : String.Empty/>
                 </div>
-                <div class="col-sm-5 intake-col">
+                <div class="col-xs-10 col-sm-5 intake-col">
                     <span class="intake-span">@Model.Services.ElementAt(i).Name</span>
                 </div>
-                <div class="col-sm-5 intake-col">
+                <div class="col-xs-12 col-sm-5 intake-col">
                     @Html.TextBoxFor(s => @Model.Services.ElementAt(i).Notes, new { @class = "form-control intake-input intake-service-input" })
                 </div>
             </div>
@@ -346,6 +353,7 @@
             <h5>
                 <span class="intake-collapse">
                     <img class="intake-collapse-img" src="/Content/Images/collapse.png" />
+                    <img class="intake-expand-img" src="/Content/Images/expand.png" />
                     Temporary Housing
                 </span>
                 <span class="intake-edit">
@@ -357,15 +365,15 @@
             </h5>
         </div>
         <div class="row intake-row collapse in">
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>Length (Days):</label>
                 <span class="intake-span">@Model.TempHousingDays</span>
                 @Html.TextBoxFor(m => @Model.TempHousingDays, new {@class= "form-control intake-input" })
-                @Html.HiddenFor(m => @Model.TempHousingDays)
+                @Html.HiddenFor(m => @Model.TempHousingDays, new { @class = "intake-hidden" })
             </div>
-            <div class="col-sm-3 intake-col">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 <label>Last Day:</label>
-                <span class="intake-span">@Model.TempHousingEndDate</span>
+                <span class="intake-span">@Model.TempHousingEndDateDisplay</span>
                 @*<div class="input-group intake-date date">
                     <input class="form-control" data-date-today-btn="true" data-date-today-highlight="true" name="TempHousingEndDate" placeholder="Enter date or hit calendar" style="display: block; width: 85%" type="text" value="2017-10-24">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
@@ -378,7 +386,7 @@
                 {
                     @Html.DatePicker("intake-date date", "TempHousingEndDate")
                 }
-                @Html.HiddenFor(m => @Model.TempHousingEndDate, new {@class = "intake-hidden"})
+                <input type="hidden" value="@Model.TempHousingEndDateDisplay" class="intake-hidden" name="TempHousingEndDate"/>
                 
             </div>
         </div>
