wip details needs polish

--- a/Odin/Content/css/orders.scss
+++ b/Odin/Content/css/orders.scss
@@ -17,7 +17,7 @@ body {
 div#list {
     height: auto;
     padding-bottom: 45px;
-    border-top: 1px solid $top_border_color;
+    //border-top: 1px solid $top_border_color;
 
     div#search {
         height: 72px;
