--- a/Odin/Content/css/shared/_definitions.scss
+++ b/Odin/Content/css/shared/_definitions.scss
@@ -20,6 +20,7 @@ $DW_Purple: #621f65;
         top: 0;
         z-index: 1;
         background-color: white;
+        border-bottom: 2px solid #c7c7c7;
 
         div#caption {
             width: 48%;
