--- a/Odin/Content/css/transferee/transferee.scss
+++ b/Odin/Content/css/transferee/transferee.scss
@@ -176,7 +176,7 @@ div#transferee {
     > div.col-md-10 {
         //height: 850px;
         //overflow-y: scroll;
-        border-top: 1px solid;
+        //border-top: 1px solid;
         font-family:sans-serif;
         div.noinit {
             display: none;
