--- a/Odin/Content/Site.css
+++ b/Odin/Content/Site.css
@@ -62,6 +62,16 @@ textarea {
 
 /* Page-level styles */
 
+.page-content{
+    padding-top: 12rem;
+}
+
+.transferee-sidenav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-top: 15rem; 
+}
 
 .transferee-list > div .transferee {
     font-weight: 400;
