--- a/Odin/Views/Orders/Transferee.cshtml
+++ b/Odin/Views/Orders/Transferee.cshtml
@@ -3,9 +3,8 @@
     Layout = "~/Views/Shared/_Common.cshtml";
 }
 
-
 <div id="transferee" class="row">
-    <div class="col-md-2">
+    <div class="col-md-2 transferee-sidenav">
         <img src="~/Content/Images/icn_person.png"/>
         <p>Victoria A. Sporer</p>
         <span class="hdr">Domestic | VIP</span><br />
@@ -23,8 +22,8 @@
             <li class="item" data-panel="itinerary"><img src="~/Content/Images/icn_internal_itinerary.png"/><span>Itinerary</span></li>
         </ul>
     </div>
-    <div class="col-md-10">
-        <div class="row">
+    <div class="col-md-10 col-md-offset-2">
+        <div class="row" style="overflow-x: hidden;">
             @Html.Partial("~/Views/Orders/Partials/_Intake.cshtml")
             @Html.Partial("~/Views/Orders/Partials/_Details.cshtml")
             @Html.Partial("~/Views/Orders/Partials/_Housing.cshtml")
