--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -2,7 +2,7 @@
 
 <div id="intake" data-order-id="@Model.Id">
     <div class="row intake-title">
-        <h4>Intake</h4>
+        <p>Intake</p>
         <span class="intake-blue">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</span>
     </div>
     <hr/>
